syntax = "proto3";

package OpenStreetMap;

message Node {
  int64 id = 1;
  double lat = 2;
  double lon = 3;
  map<string, string> tags = 4;
}

message Way {
  int64 id = 1;
  repeated int64 nodes = 2;
  map<string, string> tags = 3;
}

message Member {
  enum Type {
    MEMBER_TYPE_UNSPECIFIED = 0;
    MEMBER_TYPE_NODE = 1;
    MEMBER_TYPE_WAY = 2;
    MEMBER_TYPE_RELATION = 3;
  }

  Type type = 1;
  int64 ref = 2;
  string role = 3;
}

message Relation {
  int64 id = 1;
  repeated Member members = 2;
  map<string, string> tags = 3;
}

message Element {
  oneof result {
    Node node = 1;
    Way way = 2;
    Relation relation = 3;
  }
}

// Tagging patterns
enum Access {
  ACCESS_UNSPECIFIED = 0;
  ACCESS_PUBLIC = 1;
  ACCESS_PERMISSIVE = 2;
  ACCESS_PRIVATE = 3;
}

enum Indoor {
  INDOOR_UNSPECIFIED = 0;
  INDOOR_YES = 1;
  INDOOR_NO = 2;
  INDOOR_ROOM = 3;
  INDOOR_AREA = 4;
  INDOOR_WALL = 5;
  INDOOR_CORRIDOR = 6;
  INDOOR_DOOR = 7;
  INDOOR_LEVEL = 8;
  INDOOR_COLUMN = 9;
}

message Locked {
  bool value = 1;
  string conditional = 2;
}
